# q2-fondue

./: .copier-answers.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  edirect_requests.http  http-client.env.json  install-sra-tools.sh  metadata_file.tsv  parallel.config  pyproject.toml  requirements.txt  setup.cfg  setup.py  temp-env.yml  tutorial_draft.md  versioneer.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-dev.yaml  ci.yaml  ci.yml  dependecies.yaml  dependent-issues.yaml  docker-push.yaml  join-release.yaml  q2-ci.yaml  tag-release.yaml  test-env-files.yaml
ci/recipe/: conda_build_config.yaml  meta.yaml
conda-recipe/: meta.yaml
entrezpy-demo/: entrezpy-test.ipynb  utils.py
enviroment-files/: q2-fondue-qiime2-amplicon-2025.10.yml  q2-fondue-qiime2-moshpit-2025.10.yml
environment-files/: q2-fondue-qiime2-amplicon-2025.10.yml  q2-fondue-qiime2-amplicon-2026.1.yml  q2-fondue-qiime2-amplicon-2026.7.yml  q2-fondue-qiime2-moshpit-2026.1.yml  q2-fondue-qiime2-moshpit-2026.7.yml  q2-fondue-rachis-moshpit-2026.4.yml  q2-fondue-rachis-qiime2-2026.4.yml  q2-fondue-rachis-tiny-2026.4.yml
fastq_writer/: Cargo.toml
fastq_writer/data/: test_input.fastq
fastq_writer/src/: lib.rs
fondue-demo/: demo.ipynb  utils_sra.py
meeting_minutes/: 210217_notes.md  210301_notes.md  210309_notes.md  210330_notes.md  210420_notes.md
q2_fondue/: .gitignore  __init__.py  _entrezpy_clients.py  _metadata.py  _sequences.py  _version.py  citations.bib  get_all.py  metadata.py  plugin_setup.py  query.py  scraper.py  sequences.py  utils.py
q2_fondue/entrezpy_clients/: _efetch.py  _elink.py  _esearch.py  _pipelines.py  _sra_meta.py  _utils.py
q2_fondue/fastq_writer/: Cargo.toml
q2_fondue/rewrite_fastq/: Cargo.toml  pyproject.toml
q2_fondue/rewrite_fastq/src/: lib.rs
q2_fondue/tests/: __init__.py  _utils.py  (+13 more)
tutorial/: metadata_file.tsv  metadata_file_runs.tsv  tutorial.md  tutorial_draft.md
(+93 files in other folders)
